--- a/src/pages/category-page-login.html
+++ b/src/pages/category-page-login.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="/src/styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="./user-info/user-info.js" type="text/javascript"></script>
-    <script defer src="./index.js"></script>
+    <script src="/src/js/user-info.js" type="text/javascript"></script>
+    <script defer src="/src/js/index.js"></script>
     <title>Owl's Shoes</title>
   </head>
   <body>
     <header>
       <nav class="nav-bar">
           <div class="nav-bar-items">
-            <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
+            <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn">부엉이 신발장</a></div>
             <div class="nav-bar-menu">
-              <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-              <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
-              <a href="./item-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+              <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
+              <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
+              <a href="/src/pages/item-page-logout.html" class="btn nav-btn"> LOGOUT </a>
             </div>
           </div>
       </nav>
@@ -30,7 +30,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
+          <a href="/src/pages/category-page-login.html"><img src="/src/img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
@@ -51,48 +51,48 @@
       </nav>
       <div class="category-item-box">
         <ul class="category-box">
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
               </div>
             </li>
           </a>
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
               </div>
             </li>
           </a>
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
               </div>
             </li>
           </a>
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
               </div>
             </li>
           </a>
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
               </div>
             </li>
           </a>
-          <a href="./item-page-login.html">
-            <li class="category-box-item" style="background-image:url(./img/shoes.svg)">
+          <a href="/src/pages/item-page-login.html">
+            <li class="category-box-item" style="background-image:url(/src/img/shoes.svg)">
               <div class="category-box-text">
                 <div class="card-price">100만원</div>
                 <div class="card-name">신발이름!</div>
@@ -120,11 +120,11 @@
           <div class="footer-text-btn-box footer-text-btn-SNS">
             <div class="footer-text-btn-info">
               <ul>
-                <li><a href="https://www.instagram.com/"><img src="./img/insta_icon_1x.svg" alt="facebook">
+                <li><a href="https://www.instagram.com/"><img src="/src/img/insta_icon_1x.svg" alt="facebook">
                 </a></li>
-                <li><a href="https://www.facebook.com/"><img src="./img/facebook_icon_1x.svg" alt="facebook">
+                <li><a href="https://www.facebook.com/"><img src="/src/img/facebook_icon_1x.svg" alt="facebook">
                 </a></li>
-                <li><a href="https://twitter.com/"><img src="./img/twitter_icon_1x.svg" alt="facebook">
+                <li><a href="https://twitter.com/"><img src="/src/img/twitter_icon_1x.svg" alt="facebook">
                 </a></li>
               </ul>
             </div>
