--- a/src/pages/item-page-logout.html
+++ b/src/pages/item-page-logout.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="/src/styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./user-info/user-info.js" type="text/javascript"></script>
-  <script defer src="./index.js"></script>
+  <script src="/src/js/user-info.js" type="text/javascript"></script>
+  <script defer src="/src/js/index.js"></script>
   <title>Owl's Shoes</title>
   </head>
 <body>
   <header>
     <nav class="nav-bar">
       <div class="nav-bar-items">
-        <div class="nav-bar-comp-name"><a href="./main-page-logout.html" class="btn">부엉이 신발장</a></div>
+        <div class="nav-bar-comp-name"><a href="/src/pages/main-page-logout.html" class="btn">부엉이 신발장</a></div>
         <div class="nav-bar-menu">
-          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
           <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
           <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
         </div>
@@ -68,7 +68,7 @@
             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
           </svg>
         </div>
-        <div class="wishlist route-to-main-login"><img src="./img/shopping cart.png" alt="장바구니"></div>
+        <div class="wishlist route-to-main-login"><img src="/src/img/shopping cart.png" alt="장바구니"></div>
       </div>
   </section>
   <main class="item-bottom-container">
@@ -77,7 +77,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="./category-page-logout.html"><img src="./img/search.svg" alt=""></a>
+          <a href="/src/pages/category-page-logout.html"><img src="/src/img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
