--- a/src/pages/main-page-login.html
+++ b/src/pages/main-page-login.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="/src/styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./user-info/user-info.js" type="text/javascript"></script>
-  <script defer src="./index.js"></script>
+  <script src="/src/js/user-info.js" type="text/javascript"></script>
+  <script defer src="/src/js/index.js"></script>
   <title>Owl's Shoes</title>
   </head>
 <body  class="main-page">
   <header>
     <nav class="nav-bar">
       <div class="nav-bar-items">
-        <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
+        <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn">부엉이 신발장</a></div>
         <div class="nav-bar-menu">
-          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-          <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
-          <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
+          <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
+          <a href="/src/pages/main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
         </div>
       </div>
     </nav>
@@ -31,7 +31,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
+          <a href="/src/pages/category-page-login.html"><img src="/src/img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
@@ -42,11 +42,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -63,11 +63,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -84,11 +84,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -105,11 +105,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -126,11 +126,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -147,11 +147,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -172,11 +172,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -193,11 +193,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -214,11 +214,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -235,11 +235,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -256,11 +256,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -277,11 +277,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -302,11 +302,11 @@
     <section class="body-main-page-card main-card-container">
       <div class="card-container">
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -323,11 +323,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -344,11 +344,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -365,11 +365,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -386,11 +386,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -407,11 +407,11 @@
           </div>
         </div>
         <div class="main-card">
-          <a href="./item-page-login.html">
-            <img src="./img/shoes1.png" alt="shoes1">
+          <a href="/src/pages/item-page-login.html">
+            <img src="/src/img/shoes1.png" alt="shoes1">
           </a>
           <div class="main-card-info-box">
-            <a href="./item-page-login.html" class="text-btn card-text-btn">
+            <a href="/src/pages/item-page-login.html" class="text-btn card-text-btn">
               <div class="main-card-info main-card-info-head">
                 에어포스 1
               </div>
@@ -448,11 +448,11 @@
         <div class="footer-text-btn-box footer-text-btn-SNS">
           <div class="footer-text-btn-info">
             <ul>
-              <li><a href="https://www.instagram.com/"><img src="./img/insta_icon_1x.svg" alt="facebook">
+              <li><a href="https://www.instagram.com/"><img src="/src/img/insta_icon_1x.svg" alt="facebook">
               </a></li>
-              <li><a href="https://www.facebook.com/"><img src="./img/facebook_icon_1x.svg" alt="facebook">
+              <li><a href="https://www.facebook.com/"><img src="/src/img/facebook_icon_1x.svg" alt="facebook">
               </a></li>
-              <li><a href="https://twitter.com/"><img src="./img/twitter_icon_1x.svg" alt="facebook">
+              <li><a href="https://twitter.com/"><img src="/src/img/twitter_icon_1x.svg" alt="facebook">
               </a></li>
             </ul>
           </div>
