--- a/src/pages/unpaid.html
+++ b/src/pages/unpaid.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="/src/styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./user-info/user-info.js" type="text/javascript"></script>
-  <script defer src="./index.js"></script>
+  <script src="/src/js/user-info.js" type="text/javascript"></script>
+  <script defer src="/src/js/index.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
   <div class="fail-payment">
     <p> 결제에 실패하였습니다. </p>
-    <a href="./pay.html"><button class="btn goBackTo-btn">이전 화면으로 돌아가기</button></a>
+    <a href="/src/pages/pay.html"><button class="btn goBackTo-btn">이전 화면으로 돌아가기</button></a>
     <br>
-    <a href="./main-page-login.html"><button class="btn goBackTo-btn">시작 화면으로 돌아가기</button></a>
+    <a href="/src/pages/main-page-login.html"><button class="btn goBackTo-btn">시작 화면으로 돌아가기</button></a>
   </div>
 </body>
 </html>
