--- a/src/pay.html
+++ b/src/pay.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,17 +15,16 @@
 <body>
   <header>
     <nav class="nav-bar">
-        <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
-          <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
-          </div>
+      <div class="nav-bar-items">
+        <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
+        <div class="nav-bar-menu">
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+          <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+          <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
         </div>
+      </div>
     </nav>
   </header>
-  
   <main class="pay-page">
     <section class="ship-info">
       <p>배송정보</p>
