--- a/src/pages/paid.html
+++ b/src/pages/paid.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="../js/user-info.js" type="text/javascript"></script>
-  <script defer src="../js/index.js"></script>
+  <script defer src="../js/login.js"></script>
+  <script defer src="../js/popup.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
@@ -18,7 +19,6 @@
         <div class="nav-bar-items">
           <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
             <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
             <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
