--- a/src/pages/pay.html
+++ b/src/pages/pay.html
@@ -18,7 +18,6 @@
         <div class="nav-bar-items">
           <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
             <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
             <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
@@ -66,6 +65,6 @@
       </ul>
     </div>
   </footer>
-  <script src="../js/index.js"></script>
+  <script src="../js/pay.js"></script>
 </body>
 </html>
