js파일 기능별로 분할2

--- a/src/pages/item-page-logout.html
+++ b/src/pages/item-page-logout.html
@@ -12,6 +12,7 @@
   <script defer src="../js/login.js"></script>
   <script defer src="../js/popup.js"></script>
   <script defer src="../js/item-page.js"></script>
+  <script defer src="../js/data.js"></script>
   <title>Owl's Shoes</title>
   </head>
 <body>
