--- a/src/pages/paid.html
+++ b/src/pages/paid.html
@@ -11,6 +11,7 @@
   <script src="../js/user-info.js" type="text/javascript"></script>
   <script defer src="../js/login.js"></script>
   <script defer src="../js/popup.js"></script>
+  <script defer src="../js/data.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
