--- a/src/pages/cart-page.html
+++ b/src/pages/cart-page.html
@@ -12,6 +12,7 @@
     <script defer src="../js/cart-page.js"></script>
     <script defer src="../js/login.js"></script>
     <script defer src="../js/popup.js"></script>
+    <script defer src="../js/data.js"></script>
     <title>Owl's Shoes</title>
   </head>
 <body>
