--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <title>mypage</title>  
   <script src="../js/mypage.js"></script>
+  <script defer src="../js/data.js"></script>
 </head>
 <body  class="main-page">
   <header>
