category-page 수정

--- a/src/pages/main-page-login.html
+++ b/src/pages/main-page-login.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="../js/user-info.js" type="text/javascript"></script>
+  <script src="../js/data.js" type="text/javascript"></script>
   <script defer src="../js/main-page.js"></script>
   <script defer src="../js/login.js"></script>
   <script defer src="../js/popup.js"></script>
-  <script defer src="../js/data.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body  class="main-page">
@@ -41,18 +41,6 @@
     <section class="main-page-text-box">
       <p class="main-page-text text-1">발이 편해야</p>
       <p class="main-page-text text-2">날갯짓도 편하다.</p>
-    </section>
-    <section class="body-main-page-card main-card-container">
-      <div class="card-container">
-      </div>
-    </section>
-    <section class="body-main-page-card main-card-container">
-      <div class="card-container">
-      </div>
-    </section>
-    <section class="body-main-page-card main-card-container">
-      <div class="card-container">
-      </div>
     </section>
   </main>
   <footer class="footer">
