--- a/src/pages/category-page-logout.html
+++ b/src/pages/category-page-logout.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="../js/user-info.js" type="text/javascript"></script>
+    <script src="../js/data.js" type="text/javascript"></script>
     <script defer src="../js/category-page.js"></script>
     <script defer src="../js/login.js"></script>
     <script defer src="../js/popup.js"></script>
-    <script defer src="../js/data.js"></script>
     <title>Owl's Shoes</title>
   </head>
   <body>
