--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -20,7 +20,7 @@
           <div class="nav-bar-menu">
             <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
             <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <a href="./main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
           </div>
         </div>
     </nav>
