--- a/src/pages/pay.html
+++ b/src/pages/pay.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="../js/user-info.js" type="text/javascript"></script>
   <script defer src="../js/pay.js"></script>
   <script defer src="../js/data.js"></script>
   <title>Owl's Shoes</title>
@@ -20,7 +19,7 @@
           <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <a href="main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
           </div>
         </div>
     </nav>
