--- a/src/pages/item-page-login.html
+++ b/src/pages/item-page-login.html
@@ -31,6 +31,7 @@
         <div class="nav-bar-menu">
           <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
           <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+          <a href="cart-page.html" class="btn nav-btn"> CART </a>
           <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
         </div>
       </div>
