--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/mypage.css">
+  <link rel="stylesheet" href="./mypage.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <title>Owl's Shoes</title>  
-  <script src="../js/mypage.js"></script>
-  <script defer src="../js/data.js"></script>
+  <script src="./mypage.js"></script>
+  <script defer src="./data.js"></script>
 </head>
 <body>
   <header>
     <nav class="nav-bar">
       <div class="nav-bar-items">
-        <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn">부엉이 신발장</a></div>
+        <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
         <div class="nav-bar-menu">
-          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
-          <a href="../pages/mypage.html" class="btn nav-btn">MYPAGE</a>
-          <a href="../pages/main-page-logout.html" class="btn nav-btn">LOGOUT</a>
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./search.svg" alt=""></button>
+          <a href="./mypage.html" class="btn nav-btn">MYPAGE</a>
+          <a href="./main-page-logout.html" class="btn nav-btn">LOGOUT</a>
         </div>
       </div>
     </nav>
@@ -32,7 +32,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="../pages/category-page-login.html"><img src="../img/search.svg" alt=""></a>
+          <a href="./category-page-login.html"><img src="./search.svg" alt=""></a>
         </div>
       </div>
     </section>
@@ -82,7 +82,7 @@
           <!-- <div class="order-item">
             <div class="product-info">
               <ul>
-                <img src="../img/shoes1.png" alt="상품 A 이미지">
+                <img src="./shoes1.png" alt="상품 A 이미지">
                 <li>상품명: 상품 A</li>
                 <li>사이즈: 250mm</li>
                 <li>색상: 블랙</li>
@@ -93,7 +93,7 @@
           <!-- <div class="order-item">
             <div class="product-info">
               <ul>
-                <img src="../img/shoes10.png" alt="상품 B 이미지">
+                <img src="./shoes10.png" alt="상품 B 이미지">
                 <li>상품명: 상품 B</li>
                 <li>사이즈: 270mm</li>
                 <li>색상: 화이트</li>
