--- a/src/pages/pay.html
+++ b/src/pages/pay.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script defer src="../js/pay.js"></script>
-  <script defer src="../js/data.js"></script>
+  <script defer src="./pay.js"></script>
+  <script defer src="./data.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -36,21 +36,21 @@
     </section>
     <section class="ship-confirmed-info">
       <div class="ship-confirmed-box">
-        <img src="../img/mail.jpeg" alt="">
+        <img src="./mail.jpeg" alt="">
       </div>
     </section>
     <section class="pay-method"> 
       <p>결제방법</p>
       <div class="pay-box">
-        <div class="pay-img-contain"><input type="radio" id="credit-card" name="pay-method"> <label for="credit-card"><img src="../img/credit-card.png" alt=""></label></div>
-        <div class="pay-img-cover"><input type="radio" id="payco" name="pay-method"><label for="payco"> <img src="../img/payco.png" alt=""></label></div>
-        <div class="pay-img-contain"><input type="radio" id="kakao" name="pay-method"> <label for="kakao"><img src="../img/kakao.png" alt="" style="background-color:yellow"></label></div>
-        <div class="pay-img-contain"><input type="radio" id="naver" name="pay-method"><label for="naver"><img src="../img/naver.png" alt="" style="background-color: green;"></label></div>
-        <div class="pay-img-cover"><input type="radio" id="toss" name="pay-method"><label for="toss"><img src="../img/toss.png" alt=""></label></div>
+        <div class="pay-img-contain"><input type="radio" id="credit-card" name="pay-method"> <label for="credit-card"><img src="./credit-card.png" alt=""></label></div>
+        <div class="pay-img-cover"><input type="radio" id="payco" name="pay-method"><label for="payco"> <img src="./payco.png" alt=""></label></div>
+        <div class="pay-img-contain"><input type="radio" id="kakao" name="pay-method"> <label for="kakao"><img src="./kakao.png" alt="" style="background-color:yellow"></label></div>
+        <div class="pay-img-contain"><input type="radio" id="naver" name="pay-method"><label for="naver"><img src="./naver.png" alt="" style="background-color: green;"></label></div>
+        <div class="pay-img-cover"><input type="radio" id="toss" name="pay-method"><label for="toss"><img src="./toss.png" alt=""></label></div>
       </div>
     </section>
     <section class="pay">
-      <a href="paid.html"><button class="btn pay-btn">결제하기</button></a>
+      <a href="./paid.html"><button class="btn pay-btn">결제하기</button></a>
     </section>
   </main>
 
@@ -65,6 +65,6 @@
       </ul>
     </div>
   </footer>
-  <script src="../js/pay.js"></script>
+  <script src="./pay.js"></script>
 </body>
 </html>
