--- a/src/pages/cart-page.html
+++ b/src/pages/cart-page.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script defer src="../js/cart-page.js"></script>
-    <script defer src="../js/login.js"></script>
-    <script defer src="../js/data.js"></script>
+    <script defer src="./cart-page.js"></script>
+    <script defer src="./login.js"></script>
+    <script defer src="./popup.js"></script>
+    <script defer src="./data.js"></script>
     <title>Owl's Shoes</title>
   </head>
 <body onchange="finalPrice()">
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -50,7 +51,7 @@
     <div id="total-price"></div>
   </section>
   <section class="pay-cart-btn">
-    <a href="pay.html"><button class="btn pay-btn">결제하기</button></a>
+    <a href="./pay.html"><button class="btn pay-btn">결제하기</button></a>
   </section>
 
   <footer class="pay-footer">
